force-app/main/default/objects/nFORCE__Field_Configuration__c/nFORCE__Field_Configuration__c.object-meta.xml
<CustomObject>
    <description>Extends a field for the given object with additional features. Can be optionally tied to Routes.</description>
    <label>Field Configuration</label>
    <nameField>
        <displayFormat>FC-{000000}</displayFormat>
        <label>Field Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>