force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Address_Part__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Address_Part__c</fullName>
    <description>This picklist specifies which segment of the address selected in the input address the component should map from.</description>
    <inlineHelpText>Select which segment of the input address the component should map from.</inlineHelpText>
    <label>Address Part</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Street</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Province</fullName>
            </value>
            <value>
                <fullName>Postal Code</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>