force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Autocomplete_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Autocomplete_Attribute_Value__c</fullName>
    <description>The Administrator populates this optional picklist with the HTML autocomplete attribute according to the purpose of the input field. By default, it is blank.</description>
    <label>Autocomplete Attribute Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>nFORCE__Autocomplete_Attribute_Value</valueSetName>
    </valueSet>
</CustomField>