force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Format_Expression__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Format_Expression__c</fullName>
    <description>A regular expression for validating the format of this field. If specified, the UI will enforce contents matching the format specified and provide a specified error message if the format is not matched.</description>
    <inlineHelpText>^[a-zA-Z0-9!#$%&amp;&apos;*+=?^_`{|}~-]+(?:\.[a-zA-Z0-9!#$%&amp;&apos;*+=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?$</inlineHelpText>
    <label>Format Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>