force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>--DEPRECATED--This field is manually populated. When checked, it is used to mark if a Field Configuration is active. When unchecked, it is inactive and not used. By default, it is unchecked.</description>
    <label>-D Is Active</label>
    <type>Checkbox</type>
</CustomField>