force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Is_Editable__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. When checked, it is used to override a field in a read only screen section in the UI to be editable. When unchecked, it is not used. By default, it is unchecked.</description>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>