force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Is_Filter_Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Filter_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this optional field to make a Field Configuration available for use with Conditional Lookups. By default, it is unchecked.</description>
    <inlineHelpText>Select this checkbox to make this Field Configuration available for use with Conditional Lookups.</inlineHelpText>
    <label>Is Filter Active</label>
    <type>Checkbox</type>
</CustomField>