force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this boolean field is active, the field being configured does not display on online application forms. However, the field value is preserved and is submitted for processing along with the rest of the online application. Use Is Hidden in conjunction with Default Value to submit the online application with a default value.</description>
    <inlineHelpText>Check this setting to hide this field on supported forms.</inlineHelpText>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>