force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Is_Important__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Important__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional field is a manually populated checkbox on the Field Configuration object. When selected, an icon will display beside the associated field on the Snapshot report.</description>
    <label>Is Important</label>
    <type>Checkbox</type>
</CustomField>