force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Is_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. When enabled, it is used to override a field in an editable screen section in the UI to be read only. When disabled, it is not used. By default, it is disabled.</description>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>