force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is manually populated. It is optional. It is used to specify a screen section which this record should be applied to.</description>
    <label>Screen Section</label>
    <referenceTo>nFORCE__Screen_Section__c</referenceTo>
    <relationshipLabel>Field Configurations</relationshipLabel>
    <relationshipName>Section_Field_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>