force-app/main/default/objects/nFORCE__Field_Configuration__c/listViews/SampleView.listView-meta.xml
<ListView>
    <fullName>SampleView</fullName>
    <columns>nFORCE__Format_Expression__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>FC-002583</value>
    </filters>
    <label>SampleView</label>
    <language>en_US</language>
</ListView>